Image spacing issues

--- a/src/styles/pages/_company.scss
+++ b/src/styles/pages/_company.scss
@@ -9,7 +9,7 @@
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
-      column-gap: 2rem;
+      gap: 2rem;
       @include mqMedium {
         width: 40rem;
       }
